<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- チャット履歴 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputText" />

    <!-- 入力欄 -->
    <EditText
        android:inputType="text"
        android:id="@+id/inputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input"
        android:autofillHints=""
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button"
        app:layout_constraintBottom_toTopOf="@id/clearButton"
        app:layout_constraintHorizontal_weight="1" />

    <!-- 送信ボタン（入力欄の右隣） -->
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/inputText"
        app:layout_constraintBottom_toBottomOf="@id/inputText"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 下段ボタン群 -->
    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/minusOneButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1" />

    <Button
        android:id="@+id/minusOneButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rollback"
        android:layout_margin="8dp"
        app:layout_constraintStart_toEndOf="@id/clearButton"
        app:layout_constraintEnd_toStartOf="@id/regenButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1" />

    <Button
        android:id="@+id/regenButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/regeneration"
        android:layout_margin="8dp"
        app:layout_constraintStart_toEndOf="@id/minusOneButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabToBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputText"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:elevation="6dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
